# ym2612_format

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/ym2612_format/: converter.hpp  ctrmml.hpp  detune.hpp  dmf.hpp  dmp.hpp  format.hpp  fui.hpp  fur.hpp  gin.hpp  ginpkg.hpp  opm.hpp  patch.hpp  result.hpp  rym2612.hpp  tfi.hpp  ym2612_format.hpp
src/: converter.cpp  ctrmml.cpp  dmf.cpp  dmp.cpp  fui.cpp  fur.cpp  gin.cpp  ginpkg.cpp  json_minimal.hpp  opm.cpp  rym2612.cpp  tfi.cpp
src/cli/: main.cpp
test/: acoustic bass.dmp  bright piano.dmp  organ.dmp  roundtrip_test.cpp  sample.opm  sample_strings.tfi
